oop soft lock fixed

--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1434,7 +1434,7 @@ function updateResets(){
     document.getElementById("challenge").innerText="Chicken?"
     document.getElementById("chalinfo").innerText=" "
     }
-    if (cananti==1){
+    if (cananti==1 || dimension==1){
     document.getElementById("dimension").innerText="Dimension Hop"
     document.getElementById("dimeninfo").innerText="Hop to the other dimension."
     if (dimension==0){
