--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -184,6 +184,7 @@ var affordamt = 0;
 var ppsgainoff = 0;
 var offlineGain = 0;
 var autopresbuy = 0;
+var anticost2 = 1000000;
 document.body.onload = function(){
     loadCookie();
     updateXPmult()
