--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -1710,9 +1710,9 @@ function updateLevelandAuto(){
         presses+=1
         totalpresses+=1
     } else if (dimension==1){
-        antipresses+=1
-        totalantipresses+=1
-        axppts+=(0.001*(goals3+1))
+        antipresses+=axpmul
+        totalantipresses+=axpmul
+        axppts+=(0.001*((goals3+1)*axpmul))
     }
     } else if (pressesdec>=11 && pressesdec<111){
     pressesdec-=11
