--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -3353,7 +3353,7 @@ function loadCookie(){
     if (dimension==1){
         document.body.style="overflow: hidden; background-color: #000000"
         document.getElementById("chal").style="position: absolute; left: 6px; top: 45px; color: #FFFFFF"
-        document.getElementById("first").style="color: #FFFFFF"
+        document.getElementById("first").style="color: #FFFFFF; position: relative; top: -15px;"
         document.getElementById("second").style="color: #FFFFFF"
         document.getElementById("Level").style="color: #FFFFFF"
         document.getElementById("debug0").style="color: #FFFFFF"
@@ -3380,7 +3380,7 @@ function loadCookie(){
     } else if (dimension==0){
         document.body.style="overflow: hidden; background-color: #FFFFFF"
         document.getElementById("chal").style="position: absolute; left: 6px; top: 45px; color: #000000"
-        document.getElementById("first").style="color: #000000"
+        document.getElementById("first").style="color: #000000; position: relative; top: -15px;"
         document.getElementById("second").style="color: #000000"
         document.getElementById("Level").style="color: #000000"
         document.getElementById("debug0").style="color: #000000"
