--- a/pressing/new/index.html
+++ b/pressing/new/index.html
@@ -2642,7 +2642,7 @@ var autoreset = setInterval(function(){
         if (autopres==1 && dimension==0 && mlevel>=30){
             if (autoresettimer>=6000){
                 autoprestigegain()
-                auroresettimer-=6000
+                autoresettimer-=6000
             } else {
                 autoresettimer+=1
             }
